# ChilliShop

./: README.md  db.sqlite3  manage.py
Client/: CMakeLists.txt  CartModel.qml  CartView.qml  ChangeNameForm.qml  CopyModel.qml  CustomSpinbox.qml  ErrorMessage.qml  Filters.qml  Fonts.qrc  GoodDelegate.qml  GoodsGrid.qml  Images.qrc  LoginForm.qml  Main.qml  MainPage.qml  OrderConfirmForm.qml  OrderConfirmForm.qml.autosave  OrdersForm.qml  OrdersForm.qml.autosave  ProfilePage.qml  RegisterForm.qml  SaucesModel.qml  SeasoningsModel.qml  SeedsModel.qml  client.cpp  client.cpp.autosave  client.h  main.cpp
Client/build-ChilliWorld-Desktop_Qt_6_5_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appchilliworld_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
Client/build-ChilliWorld-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
Client/build-ChilliWorld-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appChilliWorld.cmake  Qt6_QmlPlugins_Imports_appChilliWorld.rsp
Client/build-ChilliWorld-Desktop_Qt_6_5_1_GCC_64bit-Debug/.rcc/: appChilliWorld_raw_qml_0.qrc  qmake_ChilliWorld.qrc  qrc_appChilliWorld_raw_qml_0.cpp  qrc_qmake_ChilliWorld.cpp
Client/build-ChilliWorld-Desktop_Qt_6_5_1_GCC_64bit-Debug/ChilliWorld/: ErrorMessage.qml  GoodsGrid.qml  LoginForm.qml  MainPage.qml  SeasoningsModel.qml  appChilliWorld_qml_module_dir_map.qrc  qmldir
Client/build-ChilliWorld-Desktop_Qt_6_5_1_GCC_64bit-Debug/appChilliWorld_autogen/: deps
Customer/: CMakeLists.txt  CartModel.qml  CartView.qml  CopyModel.qml  (+29 more)
(+153 files in other folders)
